# Poocano-Tauri

./: README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: index.html  manifest.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/css/: app.a6b8ab2d.css  chunk-vendors.75746f9d.css
src/js/: app.4f3cf818.js  chunk-vendors.6f420812.js
